kuudra一些bug修复